Document "workspace" subdirectory.

--- a/man/icewm.pod
+++ b/man/icewm.pod
@@ -1423,6 +1423,12 @@ contain tweaks of the F<default.theme> file.
 How to create a theme is explained in the
 L<IceWM Theme Creation Howto|https://ice-wm.org/themes>.
 
+=item F<workspace>
+
+If C<PagerShowPreview> is disabled, icewm looks in the C<workspace>
+directory for images to draw on a workspace button. The image filename
+should have the name of the workspace. The image extension is optional.
+
 =back
 
 =head2 OPACITY
