--- a/man/icesh.pod
+++ b/man/icesh.pod
@@ -647,6 +647,15 @@ Sort the list of windows from topmost to bottom-most.
 
 Reverse the order of the list of windows.
 
+=item B<loop> [I<count>]
+
+Loop back to the beginning of the command and repeat. The optional
+I<count> limits the number of repetitions.
+
+=item B<pick>
+
+Choose a window by a mouse button click.
+
 =back
 
 =head2 MANAGER ACTIONS
