--- a/AUTHORS
+++ b/AUTHORS
@@ -29,7 +29,7 @@ Author: Efstathios Iosifidis <eiosifidis@gmail.com>
 Author: Markéta Calábková <meggy.calabkova@gmail.com>
 Author: ingemar karlsson <ingemar_bengt@hotmail.com>
 Author: Andika Triwidada <andika@gmail.com>
-Author: Luna Jernberg <droidbittin@gmail.com>
+Author: Luna Jernberg <bittin@opensuse.org>
 Author: Juan Sarria <juansarriam@gmail.com>
 Author: Davide Aiello <davidea@novilinguists.com>
 Author: Franziska Weinberger <f.weinberger@gemino.de>
