--- a/man/icewmbg.pod
+++ b/man/icewmbg.pod
@@ -11,11 +11,11 @@ B<icewmbg> [I<OPTIONS>]
 =head2 DESCRIPTION
 
 B<icewmbg> can assign a colour or image to the I<X11> desktop background.
-Common image formats are supported.  Each L<icewm(1)> work space can have
+Common image formats are supported.  Each L<icewm(1)> workspace can have
 its own background.
 
 When the background image changes, B<icewmbg> can be notified to
-update the background.  When switching work spaces, it checks the image
+update the background.  When switching workspaces, it checks the image
 file modification time.  If the file has changed, it reloads the
 image from file.
 
@@ -122,6 +122,11 @@ This overrules the C<DesktopBackgroundMultihead> preference.
 Cycle over the list of background images every I<SECONDS>.
 This overrules the C<CycleBackgroundsPeriod> preference.
 
+=item B<-o>, B<--output=FILE>
+
+Redirect all output to I<FILE>.
+A leading tilde or environment variable is expanded.
+
 =back
 
 =head2 GENERAL OPTIONS
@@ -176,22 +181,22 @@ The settings read are:
 
 If these settings are set in the F<preferences> file, they can
 be overridden by the theme in the theme defaults file.
-To prevent this, set these preferences in F<prefoverride> instead.
+To enforce a certain setting, set it in the F<prefoverride> file instead.
 See L<icewm-prefoverride(5)>.
 
-=head2 WORK SPACES
+=head2 WORKSPACES
 
-Each work space can have a unique image. Specify multiple images to
+Each workspace can have a unique image. Specify multiple images to
 B<DesktopBackgroundImage> separated by comma's.  Or give at least one
-directory with images. The images are assigned to each work space in
-the order given. When icewm changes work space, the running icewmbg
+directory with images. The images are assigned to each workspace in
+the order given. When icewm changes workspace, the running icewmbg
 will adapt the desktop background to the assigned image.
 
-If you specify more images then there are work spaces, then
+If you specify more images then there are workspaces, then
 B<CycleBackgroundsPeriod> can set a period. When the period expires,
 icewmbg will switch to the next set of images. If you give less images
-than there are work spaces, then icewmbg will reuse previous images
-for the remaining work spaces.
+than there are workspaces, then icewmbg will reuse previous images
+for the remaining workspaces.
 
 =head2 IMAGE SCALING
 
@@ -207,7 +212,7 @@ What happens for their combination is given by the following table:
 
 =head2 EXAMPLES
 
-    # For four unique desktop backgrounds for four work spaces do:
+    # For four unique desktop backgrounds for four workspaces do:
 
     icewmbg -p -i image0,image1,image2,image3 &
 
@@ -234,7 +239,7 @@ B<icewmbg> will terminate.
 =item B<SIGUSR1>
 
 B<icewmbg> will reshuffle the list of background images and
-update the backgrounds of all work spaces.
+update the backgrounds of all workspaces.
 
 =back
 
