--- a/man/icewm-keys.pod
+++ b/man/icewm-keys.pod
@@ -15,8 +15,8 @@
 =head2 DESCRIPTION
 
 The C<keys> file defines global keybindings to launch applications.
-A keybinding has three parts. The word B<key>, a double-quoted string
-with an X11 key combination, and a program with its arguments.
+A keybinding has three parts: the word B<key>, a double-quoted string
+with an X11 key combination and a program with its arguments.
 These are separated by one or more spaces. Empty lines are allowed.
 Comment lines start with a hash.
 
@@ -27,9 +27,9 @@ For example, the following defines a hotkey to restart B<icewm>:
 See the output of C<xmodmap -pk> for a list of the many keystroke names
 you can use in icewm key definitions. Since IceWM version 3.4.0,
 bindings can not only be defined by their keystroke name, but also by
-their key label. In addition, the shifted key is available as well.
+their key label. In addition, the shifted key is now definable as well.
 For example, the key with + and = can be bound in either of the
-following four ways, which here are identical:
+following four ways, which are identical:
 
     key "Ctrl+Shift+equal"  xterm
     key "Ctrl+Shift+="      xterm
@@ -72,8 +72,8 @@ C<Pointer_Button1> and up, like C<Shift+Pointer_Button3>.
 
 =item I<program> I<options>
 
-I<program> is the name of the executable or its full path.
-The path may start with a tilde or an environment variable,
+I<program> is the name of the executable or its path.
+It may start with a tilde or an environment variable,
 which will be expanded.
 The I<options> are passed as arguments to the I<program>.
 
