--- a/man/icewm.pod
+++ b/man/icewm.pod
@@ -529,11 +529,57 @@ Pressing C<Enter> will execute the command.
 B<AddressBarCommand>=C</bin/sh> will be used to execute the command.
 On C<Control+Enter> the command is executed in a terminal
 as given by B<TerminalCommand>.
-The address bar maintains a history that is navigable by the I<Up>
-and I<Down> keys.
-It supports file completion using C<Tab> or C<Ctrl+I>.
-A rich set of editing operations is supported,
-including cut-/copy-/paste-operations.
+The address bar has a history that is navigable by I<Up> and I<Down>.
+It supports file completion using C<Tab> or C<Ctrl+I>,
+editing operations and cut/copy/paste:
+
+=over
+
+=item Ctrl+a: select all
+
+=item Ctrl+backslash: deselect all
+
+=item Ctrl+u: delete selected or to line start
+
+=item Ctrl+v: paste selected
+
+=item Ctrl+w: delete selected or previous word
+
+=item Ctrl+x: cut selection
+
+=item Ctrl+c: copy selection
+
+=item Ctrl+i: complete
+
+=item Ctrl+Left: back a word
+
+=item Ctrl+Right: forward a word
+
+=item Ctrl+Shift+Backspace: delete to beginning
+
+=item Ctrl+Shift+Delete: delete to end
+
+=item Ctrl+Delete: delete word
+
+=item Ctrl+Backspace: delete previous word
+
+=item Shift+Delete: cut selection
+
+=item Shift+Insert: paste selected
+
+=item Left: move cursor left
+
+=item Right: move cursor right
+
+=item Home: move cursor to line start
+
+=item End: move cursor to line end
+
+=item Delete: delete next character
+
+=item Backspace: delete previous character
+
+=back
 
 =head2 WINDOW LIST
 
