MailBoxPath is a list separated by spaces.

--- a/man/icewm-preferences.pod
+++ b/man/icewm-preferences.pod
@@ -642,7 +642,7 @@ Favour Xft fonts over core X11 fonts where possible.
 
 =item B<MailBoxPath>=""
 
-A colon separated list of paths of your mailboxes.
+A list of paths of your mailboxes separated by spaces.
 If this is empty, $MAILPATH or $MAIL is used instead.
 
 Path to a mbox file. Remote mail boxes are accessed by specifying an URL
